Apply template. WIP

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,65 @@
-<p>about works!</p>
+<section id="about" class="about container p-5">
+    <div class="container" data-aos="fade-up">
+        <div class="section-title">
+            <h2>About</h2>
+            <p>
+                My name is Carolina. I live in Barcelona and have always been working in the tourism area until now. I now want to become a developer because I find it very interesting and a futrure proof career.
+            </p>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4">
+                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+            </div>
+            <div class="col-lg-8 pt-4 pt-lg-0 content">
+                <h3>Web Developer student &amp; Passionate learner.</h3>
+                <p class="fst-italic">
+                    As a Web Development student I work as hard as I can to learn and improve my skills every day.
+                </p>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <ul>
+                            <li>
+                                <i class="bi bi-chevron-right"></i>
+                                <strong>Birthday:</strong> <span>January 1992</span>
+                            </li>
+                            <li>
+                                <i class="bi bi-chevron-right"></i> <strong>Github:</strong>
+                                <a href="https://github.com/bielidev" target="_blank">https://github.com/bielidev</a
+                >
+              </li>
+              <li>
+                <i class="bi bi-chevron-right"></i> <strong>City:</strong>
+                <span>Barcelona, Spain</span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <ul>
+              <li>
+                <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
+                <span>29</span>
+              </li>
+              <li>
+                <i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
+                <span>Tourism Management</span>
+              </li>
+              <li>
+                <i class="bi bi-chevron-right"></i>
+                <strong>Email:</strong> <span>caarolbg@gmail.com</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p>
+          I have always been working as a tourism and hospitality manager and I
+          was already thinking of changing my goals. The Covid-19 just
+          accelerated the process as I was able to invest time into studying to
+          become a web developer and currently I am learning Angular and
+          discovering my new passion. I hope to continue learning and I always
+          give my 200%
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
