--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,19 @@
-<footer class="footer mt-auto py-3 bg-light">
+<footer id="footer">
     <div class="container">
-        <span class="text-muted">Hecho por {{ autor }} en {{ createdAt }}</span>
+        <h3>Carolina Blanco</h3>
+        <p>For futher info, follow me!</p>
+        <div class="social-links">
+            <a href="https://github.com/bielidev" class="github"><i class="bx bxl-github"></i
+      ></a>
+            <a href="https://www.linkedin.com/in/carolinablancog/" class="linkedin"><i class="bx bxl-linkedin"></i
+      ></a>
+        </div>
+        <div class="copyright">
+            &copy; Copyright <strong><span>MyResume</span></strong
+      >. All Rights Reserved
     </div>
+    <div class="credits">
+      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    </div>
+  </div>
 </footer>
