--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<section id="home" class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+        <h1>Carolina Blanco</h1>
+        <p>I'm studying to become a programmer</p>
+        <div class="social-links">
+            <a href="https://github.com/bielidev" class="github"><i class="bx bxl-github"></i
+      ></a>
+            <a href="https://www.linkedin.com/in/carolinablancog/" class="linkedin"><i class="bx bxl-linkedin"></i
+      ></a>
+        </div>
+    </div>
+</section>
