--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="d-flex flex-column h-100">
-    <app-header></app-header>
-    <div class="container flex-grow-1"></div>
-    <app-footer></app-footer>
-</div>
+<app-header></app-header>
+
+<main id="main">
+    <router-outlet></router-outlet>
+</main>
+
+<app-footer></app-footer>
