--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -131,6 +131,10 @@
     background: #0678e3;
 }
 
+.contact .php-email-form button[type="submit"]:disabled {
+    background: #728394;
+}
+
 @-webkit-keyframes animate-loading {
     0% {
         transform: rotate(0deg);
