--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -28,26 +28,84 @@
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0">
-                <form role="form" class="php-email-form">
+                <form role="form" class="php-email-form" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
                     <div class="row">
                         <div class="col-md-6 form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required />
-                        </div>
-                        <div class="col-md-6 form-group mt-3 mt-md-0">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required />
-                        </div>
-                    </div>
-                    <div class="form-group mt-3">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required />
-                    </div>
-                    <div class="form-group mt-3">
-                        <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit">Send Message</button>
-                    </div>
-                </form>
+                            <input formControlName="name" type="text" name="name" class="form-control" [ngClass]="{ 'is-invalid': name.errors && name.touched }" id="name" placeholder="Your Name" />
+                            <span class="text-danger" *ngIf="name.errors && name.touched">This field is required</span
+              >
             </div>
-        </div>
+            <div class="col-md-6 form-group mt-3 mt-md-0">
+              <input
+                formControlName="email"
+                type="email"
+                class="form-control"
+                name="email"
+                id="email"
+                placeholder="Your Email"
+                [ngClass]="{ 'is-invalid': email.errors && email.touched }"
+              />
+              <span
+                class="text-danger"
+                *ngIf="email.errors && email.errors.required && email.touched"
+                >This field is required</span
+              >
+              <span
+                class="text-danger"
+                *ngIf="email.errors && email.errors.email && email.touched"
+                >Email format invalid</span
+              >
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <input
+              formControlName="subject"
+              type="text"
+              class="form-control"
+              name="subject"
+              id="subject"
+              placeholder="Subject"
+              [ngClass]="{ 'is-invalid': subject.errors && subject.touched }"
+            />
+            <span
+              class="text-danger"
+              *ngIf="
+                subject.errors && subject.errors.required && subject.touched
+              "
+              >This field is required</span
+            >
+          </div>
+          <div class="form-group mt-3">
+            <textarea
+              formControlName="message"
+              class="form-control"
+              name="message"
+              rows="5"
+              placeholder="Message"
+              [ngClass]="{ 'is-invalid': message.errors && message.touched }"
+            ></textarea>
+            <span
+              class="text-danger"
+              *ngIf="
+                message.errors && message.errors.required && message.touched
+              "
+              >This field is required</span
+            >
+            <span
+              class="text-danger"
+              *ngIf="
+                message.errors && message.errors.maxlength && message.touched
+              "
+              >Must be less than 100 characters</span
+            >
+          </div>
+          <div class="text-center">
+            <button type="submit" [disabled]="contactForm.invalid">
+              Send Message
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </section>
